# Stardust-Leak

./: .gitignore  LICENSE  README.md  build.gradle  keystore.jks  settings.gradle
WebsocketConsole/: Commands.cs  JsonTemplate.cs  Program.cs  TcpHandler.cs  cmdId.cs
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  Hook.h  Lists.h  Menu.h  Stardust.cpp
app/src/main/cpp/Features/: Websocket.h
app/src/main/cpp/Features/SceneExplorer/: HierarchyView.h  InspectorView.h
app/src/main/cpp/Game/: Auth.h  Functions.h  Hooks.h  Patches.h  Pointers.h  sex.json
app/src/main/cpp/Icons/: IconsKenney.h
app/src/main/cpp/ImGui/: console.h  user_interface.cpp
app/src/main/cpp/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_android.h
app/src/main/cpp/Include/: Drawing.h  JNIStuff.h  Misc.h  base64.hpp  guid.cpp  guid.hpp  imguishit.h  obfusheader.h  touch_bnm.cpp  touch_bnm.h
app/src/main/cpp/Include/ByNameModding/: BNM.cpp  BNM_settings.hpp
app/src/main/cpp/Include/Stardust/: Config.h  Patch.h  Pattern.h  Stacktracer.h
app/src/main/cpp/Include/Unity/: Quaternion.h  Rect.h  Unity.h  Vector3.h
app/src/main/cpp/il2cpp/: il2cpp-utils.h
app/src/main/java/com/modfs/lstardust/: Hook.java
gradle/wrapper/: gradle-wrapper.properties
